--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -16,7 +16,6 @@
   "content_scripts":[
     {
       "matches": ["https://*/*"],
-      "css": ["content.css"],
       "js" : ["content.js"]
     },
     {
@@ -32,6 +31,7 @@
   ],
   "permissions": [
     "tabs",
+    "activeTab",
     "notifications",
     "contextMenus",
     "https://*"
