Integrated With OWL UI.

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -3,9 +3,7 @@
   "description": "Base Level Extension",
   "version": "1.0",
   "manifest_version": 3,
-  "host_permissions": [
-    "http://127.0.0.1:5000/*"
-  ],
+  "host_premissions": "http://127.0.0.1:5000/*",
   "action": {
     "default_popup": "dpbh.html",
     "default_icon": "img.png"
@@ -13,20 +11,24 @@
   "background": {
     "service_worker": "eventPage.js"
   },
-  "content_scripts":[
+  "content_scripts": [
     {
-      "matches": ["https://*/*"],
-      "js" : ["content.js"]
-    },
-    {
-      "matches": ["https://*/*"],
-      "js": ["floating_button.js"]
+      "matches": [
+        "<all_urls>"
+      ],
+      "js": [
+        "content.js"
+      ]
     }
   ],
   "web_accessible_resources": [
     {
-      "resources": ["owl.jpeg"],
-      "matches": ["<all_urls>"]
+      "resources": [
+        "owl.jpeg"
+      ],
+      "matches": [
+        "<all_urls>"
+      ]
     }
   ],
   "permissions": [
