--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -32,6 +32,10 @@
     "activeTab",
     "notifications",
     "contextMenus",
+    "notifications",
+        "storage",
+        "alarms",
+        "nativeMessaging",
     "https://*"
   ]
 }
